--- a/app/views/css/style.css
+++ b/app/views/css/style.css
@@ -1,6 +1,7 @@
 
 body, .menu-lateral {
     background-color: #e7f0fa; /* Color de fondo azul claro para la página */
+    padding-left: 15px;
   }
   .rounded-box {
       border-radius: 15px;
@@ -289,7 +290,8 @@ LISTADO EMPLEADOS
   flex-grow: 1;
   max-width: 50%; /* Limita el ancho del input a la mitad del contenedor */
   margin: 0; /* Asegúrate de que no haya margen extra */
-  padding: 0.375rem 0.75rem; /* Ajusta el relleno para igualarlo con el botón */
+  padding: 10px 0.75rem; /* Ajusta el relleno para igualarlo con el botón */
+  border-radius: 5px;
 }
 
 .btn-search {
@@ -536,12 +538,6 @@ LOGIN
   text-decoration: none; /* Opcional: quitar el subrayado del enlace */
   border-radius: 5px; /* Opcional: bordes redondeados */
   font-size: 16px; /* Tamaño del texto, ajustable a tus necesidades */
-}
-
-
-header{
-  max-height: 70px;
-
 }
 
 .img-nav{
